# skillbox_hometask

./: CMakeLists.txt  README.md
11.6/Caesar_cipher/: CMakeLists.txt  a.out  main.cpp
11.6/comparison_numbers/: CMakeLists.txt  main.cpp
11.6/email_correct/: CMakeLists.txt  main.cpp
11.6/ip_validation/: CMakeLists.txt  main.cpp
11.6/tic_tac_toe/: CMakeLists.txt  main.cpp
12/Average number of storeys/: main.cpp
12/Self-isolation level/: CMakeLists.txt  main.cpp
12/task_1/: main.cpp
13.6/task_1/: CMakeLists.txt  a.out  main.cpp
13.6/task_2/: CMakeLists.txt  main.cpp
13.6/task_3/: CMakeLists.txt  main.cpp
14/task 1/: main.cpp
14/task 2/: CMakeLists.txt  main.cpp
14/task_3/: main.cpp
14/task_4/: main.cpp
14/task_5/: main.cpp
14/task_6/: CMakeLists.txt  main.cpp
14/task_7/: CMakeLists.txt  main.cpp
14/task_8/: CMakeLists.txt  main.cpp
15/task_1/: CMakeLists.txt  main.cpp
15/task_2/: main.cpp
15/task_3/: CMakeLists.txt  main.cpp
15/task_4/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
16/Fractional stitcher/: CMakeLists.txt  main.cpp
16/calculator/: CMakeLists.txt  main.cpp
16/piano/: CMakeLists.txt  main.cpp
16/smarthome/: CMakeLists.txt  main.cpp  smarthome.h
16/speedometer/: CMakeLists.txt  main.cpp
17/task_1/: CMakeLists.txt  main.cpp
17/task_2/: CMakeLists.txt  main.cpp
17/task_3/: main.cpp
18/task_1/: main.cpp
18/task_2/: a.out  main.cpp
18/task_4/: main.cpp
18/untitled/: main.cpp
19/task_1/: CMakeLists.txt  main.cpp  word.txt
19/task_2/: main.cpp  test.txt
empty_app/: CMakeLists.txt  a.out  main.cpp
(+8 files in other folders)
